--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 *.json
 .vs/Skele_lib/v16/.suo
 *.db
@@ -12,3 +11,4 @@
 .vs/Skele_lib/v17/
 .vs/Skele_lib/FileContentIndex/
 New Text Document.txt
+/.idea/
